<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBlack"
    tools:context=".Activities.LoginActivity">

  <ImageView
      android:id="@+id/imageLogo"
      android:layout_width="136dp"
      android:layout_height="133dp"
      android:layout_marginStart="136dp"
      android:layout_marginLeft="136dp"
      android:layout_marginTop="108dp"
      android:contentDescription="@string/login_icon"
      android:src="@drawable/ic_welcome"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/logEmail"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="56dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:ems="10"
      android:hint="@string/email_hint"
      android:inputType="textEmailAddress"
      android:textColor="#fff"
      android:textColorHint="#fff"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

  <EditText
      android:id="@+id/logPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:ems="10"
      android:hint="@string/pass_hint"
      android:inputType="textVisiblePassword"
      android:textColor="#fff"
      android:textColorHint="#fff"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/logEmail" />

  <TextView
      android:id="@+id/textViewWelcome"
      android:layout_width="184dp"
      android:layout_height="46dp"
      android:layout_marginBottom="8dp"
      android:text="@string/welcome"
      android:textColor="#fff"
      android:textSize="36sp"
      app:layout_constraintBottom_toTopOf="@+id/imageLogo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/buttonLogin"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginLeft="24dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="24dp"
      android:layout_marginRight="24dp"
      android:background="@android:color/holo_blue_bright"
      android:text="@string/button_login"
      android:textColor="@color/mywhite"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

  <Button
      android:id="@+id/button2Create"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginLeft="24dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="24dp"
      android:layout_marginRight="24dp"
      android:background="#2196F3"
      android:backgroundTint="@color/myBlack"
      android:text="@string/create_account"
      android:textColor="@color/mywhite"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

  <ProgressBar
      android:id="@+id/progressBar_login"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="44dp"
      android:indeterminate="true"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button2Create" />

  <TextView
      android:id="@+id/forgotPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="128dp"
      android:layout_marginLeft="128dp"
      android:layout_marginTop="16dp"
      android:text="@string/foget"
      android:textColor="#F40909"
      app:layout_constraintStart_toStartOf="@+id/logPassword"
      app:layout_constraintTop_toBottomOf="@+id/logPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>

