<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".Activities.CreateActivity">

  <ImageView
      android:id="@+id/imageLogo2"
      android:layout_width="146dp"
      android:layout_height="140dp"
      android:layout_marginStart="128dp"
      android:layout_marginLeft="128dp"
      android:layout_marginTop="108dp"
      android:contentDescription="@string/login_icon"
      android:src="@drawable/ic_welcome"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/regEmail"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginLeft="24dp"
      android:layout_marginTop="44dp"
      android:layout_marginEnd="24dp"
      android:layout_marginRight="24dp"
      android:ems="10"
      android:hint="@string/email_hint"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageLogo2" />

  <EditText
      android:id="@+id/regPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginLeft="24dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginRight="24dp"
      android:ems="10"
      android:hint="@string/passwordReg"
      android:inputType="textVisiblePassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/regEmail" />

  <TextView
      android:id="@+id/textViewWelcome2"
      android:layout_width="0dp"
      android:layout_height="62dp"
      android:layout_marginBottom="31dp"
      android:text="@string/lets"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="36sp"
      app:layout_constraintBottom_toTopOf="@+id/imageLogo2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0" />

  <Button
      android:id="@+id/button2Create"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginLeft="24dp"
      android:layout_marginTop="92dp"
      android:layout_marginEnd="24dp"
      android:layout_marginRight="24dp"
      android:background="@android:color/holo_blue_bright"
      android:text="@string/createaccount"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/regPassword" />

  <Button
      android:id="@+id/back_to_login"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginLeft="24dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginRight="24dp"
      android:background="#2196F3"
      android:text="@string/tologin"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button2Create" />

  <ProgressBar
      android:id="@+id/progressBar_Create"
      style="?android:attr/progressBarStyleHorizontal"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:indeterminate="true"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/back_to_login" />

  <EditText
      android:id="@+id/comformpassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginLeft="24dp"
      android:layout_marginTop="61dp"
      android:layout_marginEnd="24dp"
      android:layout_marginRight="24dp"
      android:ems="10"
      android:hint="@string/conformPassword"
      android:inputType="textVisiblePassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/regPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>
