<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AnotherUserAccount"
    android:orientation="horizontal">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAccount"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_account"
            android:layout_width="411dp"
            android:layout_height="365dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constCsard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/toolfaceAnother"
                    android:layout_width="104dp"
                    android:layout_height="84dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_person"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/your_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Name_"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/Approvaltv"
                    app:layout_constraintHorizontal_bias="0.042"
                    app:layout_constraintStart_toEndOf="@+id/toolfaceAnother"
                    app:layout_constraintTop_toTopOf="@+id/toolfaceAnother" />

                <TextView
                    android:id="@+id/Approvaltv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"

                    android:layout_marginRight="16dp"
                    android:background="#23221F"
                    android:textColor="#EEEFE4"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/toolfaceAnother"
                    app:layout_constraintTop_toTopOf="@+id/your_name"
                    tools:text="@string/off" />

                <TextView
                    android:id="@+id/apprs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/Approved"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/apprscounter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/apprscounter" />

                <TextView
                    android:id="@+id/apprscounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="148dp"
                    android:layout_marginLeft="148dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/apprs"
                    app:layout_constraintStart_toEndOf="@+id/sec_name"
                    app:layout_constraintTop_toBottomOf="@+id/Approvaltv" />

                <TextView
                    android:id="@+id/appd1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toStartOf="@+id/apd2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/apprscounter"
                    app:layout_constraintTop_toBottomOf="@+id/apprscounter" />

                <TextView
                    android:id="@+id/apd2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/Approvals"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/appd1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/apprs"
                    app:layout_constraintTop_toBottomOf="@+id/apprs" />

                <ImageView
                    android:id="@+id/textMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_msg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.081"
                    app:layout_constraintStart_toStartOf="@+id/apd2"
                    app:layout_constraintTop_toBottomOf="@+id/apd2" />

                <TextView
                    android:id="@+id/sec_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/your_name"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/your_name"
                    app:layout_constraintTop_toBottomOf="@+id/your_name" />

                <TextView
                    android:id="@+id/uCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="@+id/toolfaceAnother"
                    app:layout_constraintHorizontal_bias="0.432"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolfaceAnother" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/uCountry"
                    app:layout_constraintStart_toStartOf="@+id/uCountry"
                    app:layout_constraintTop_toBottomOf="@+id/uCountry" />

                <TextView
                    android:id="@+id/uCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="@+id/uCity"
                    app:layout_constraintStart_toStartOf="@+id/uCity"
                    app:layout_constraintTop_toBottomOf="@+id/uCity" />

                <TextView
                    android:id="@+id/uSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="@+id/sec_name"
                    app:layout_constraintStart_toStartOf="@+id/sec_name"
                    app:layout_constraintTop_toBottomOf="@+id/sec_name" />

                <TextView
                    android:id="@+id/uwork"
                    android:layout_width="320dp"
                    android:layout_height="122dp"
                    android:layout_marginTop="8dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="390dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.476"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/uwork" />

                <Button
                    android:id="@+id/Ureview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/rvs"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/view2"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="@+id/view2"
                    app:layout_constraintTop_toBottomOf="@+id/view2"
                    app:layout_constraintVertical_bias="1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Your_posts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>